--- a/netflix.css
+++ b/netflix.css
@@ -11,7 +11,7 @@ body{
 .header{
     width :100%;
     height :100vh;
-     background-image: linear-gradient(rgba(0, 0, 0, 0.0), rgba(0, 0, 0, 0.0)), url('netflix back.png');
+     background-image: linear-gradient(rgba(0, 0, 0, 0.0), rgba(0, 0, 0, 0.0)), url('./photos/netflix\ back.png ');
      background-size: cover;
      background-position: center;
      padding:100px 8%;
